--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -42,7 +42,9 @@
 
 	/* --Extenders-- */
 
-	/* Alternate */
+	/* -Alternates- */
+
+	/* Subtle */
 	.btn--main-alt {
 		box-shadow: inset 0 -1px 0 rgba(#000, 0.15);
 
@@ -56,6 +58,14 @@
 		&:visited,
 		&:hover,
 		&:focus {color: $color-dark-txt;}
+	}
+
+	/* Dark */
+	.btn--main-alt2 {
+		/* Bg colour combined with disabled state */
+		&,
+		&[disabled],
+		&.is-disabled {background-color: $color-med-txt;}
 	}
 
 	/* Compact - reduce padding by 50% */
