adding a new extender

--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -61,6 +61,9 @@
 /* Gutterless */
 .grid--gutterless > .grid__item {padding-left: 0;}
 
+/* Remove bottom margin */
+.grid--flush > .grid__item {margin-bottom: 0;}
+
 /* Center align */
 .grid--center > .grid__item {
 	margin-left: auto;
