--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid--gutterless grid--rev">
+<div class="grid grid--gutterless grid--rev grid--flush">
 
   <!-- Product name, brand, price, location and contact -->
   <div class="grid__item non-palm-two-fifths">
@@ -14,16 +14,10 @@
 
     <!-- Store location -->
     <div class="store-location detail-view__divider">
-      <div class="slats box">
-        <div class="slats__img">
-          <!-- [BACK END] image needs to be 200px x 200px and `alt` attr needs to be dynamically updates -->
-          <img src="/assets/dummy/store.jpg" alt="">
-        </div>
-        <div class="slats__body">
+      <div class="box hide-fully">
           <img src="/assets/dummy/retailer-logo.png" alt="">
           <p>Open till <time datetime="">6pm</time> tonight</p>
-          <a href="#" class="btn btn--main"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span> Store map</a>
-        </div>
+          <a href="#" class="btn btn--main btn--main-alt2"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span> Store map</a>
       </div>
       <img src="/assets/dummy/map-tile.png" alt="">
     </div>
@@ -34,16 +28,26 @@
 
   <!-- Product images -->
   <div class="grid__item non-palm-three-fifths">
-    <div class="detail-view__divider">
-        <!-- Flexslider -->
-        <div class="flexslider">
-          <ul class="slides">
-            <li><img src="/assets/dummy/product.jpg" alt=""></li>
-            <li><img src="/assets/dummy/product.jpg" alt=""></li>
-            <li><img src="/assets/dummy/product.jpg" alt=""></li>
-          </ul>
-        </div>
-        <!-- //Flexslider -->
+    <div class="island island--top-btm">
+      <!-- Flexslider -->
+      <div class="flexslider flexslider--gallery flexslider--gallery-lrg-img">
+        <ul class="slides">
+          <!-- [BACK END] images are 469px x 474px and `alt` attr's need to be dynamically populated e.g. 'Product name photo' -->
+          <li><img src="/assets/dummy/product.jpg" alt=""></li>
+          <li><img src="/assets/dummy/product2.jpg" alt=""></li>
+          <li><img src="/assets/dummy/product3.jpg" alt=""></li>
+          <!-- <li><img src="/assets/dummy/product.jpg" alt=""></li> -->
+        </ul>
+      </div>
+      <div class="flexslider flexslider--gallery flexslider--gallery-thumbs">
+        <ul class="slides">
+          <li><img src="/assets/dummy/product.jpg" alt=""></li>
+          <li><img src="/assets/dummy/product2.jpg" alt=""></li>
+          <li><img src="/assets/dummy/product3.jpg" alt=""></li>
+          <!-- <li><img src="/assets/dummy/product.jpg" alt=""></li> -->
+        </ul>
+      </div>
+      <!-- //Flexslider -->
     </div>
   </div>
   <!-- //Product images -->
@@ -51,30 +55,62 @@
 </div>
 
 <%- content_for :javascript do -%>
+  <!-- Run 'Flexslider' plugin -->
   <%= javascript_include_tag 'vendor/jquery.flexslider' %>
   <script>
     // Run 'Flexslider' plugin
     $(window).load(function() {
 
-      $('.flexslider').flexslider({
+      // Thumbnails
+      $('.flexslider--gallery-thumbs').flexslider({
         animation: 'slide',
         animationSpeed: 200,
-        slideshowSpeed: 6000,
-        //smoothHeight: true, // Only use this if you have portrait and landscape images
-        controlNav: true,
+        multipleKeyboard: true,
+        controlNav: false,
+        directionNav: false,
+        itemWidth: 75,
+        itemMargin: 5,
+        slideshow: false,
+        asNavFor: '.flexslider--gallery-lrg-img',
         // Do stuff when the slider loads the first slide
         start: function(slider) {
           // Add some ARIA
           slider.container.attr('role', 'listbox');
-          slider.slides.attr({'role': 'option', 'aria-selected': 'false', 'tabindex' : '-1'});
+          slider.slides.attr({'role': 'option', 'aria-selected': 'false'});
+          slider.slides.eq(slider.currentSlide).attr('aria-selected', 'true');
+        }
+      });
+
+      // Large image
+      $('.flexslider--gallery-lrg-img').flexslider({
+        animationSpeed: 400,
+        multipleKeyboard: true,
+        controlNav: true,
+        slideshow: false,
+        sync: '.flexslider--gallery-thumbs',
+        prevText: '<span class="hide-visually">Previous</span>',
+        nextText: '<span class="hide-visually">Next</span>',
+        // Do stuff when the slider loads the first slide
+        start: function(slider) {
+          // Add some ARIA
+          slider.container.attr('role', 'listbox');
+          slider.slides.attr({'role': 'option', 'aria-selected': 'false'});
           slider.slides.eq(slider.currentSlide).attr('aria-selected', 'true');
           slider.controlNav.attr({'href' : '#', 'role' : 'button'});
           slider.directionNav.attr('role', 'button');
+          // Inject classes into prev/next buttons
+          $('.flexslider--gallery-lrg-img').find('.flex-prev').addClass('icon icon--arrow-left-big icon--flush-top'); // prev
+          $('.flexslider--gallery-lrg-img').find('.flex-next').addClass('icon icon--arrow-right-big icon--flush-top'); // next
+        },
+        // Do stuff asynchronously with each slider animation
+        before: function(slider) {
+          $('.flexslider--gallery-thumbs').find('.flex-active-slide').attr('aria-selected', 'false');
         },
         // Do stuff after each slider animation completes
         after: function(slider) {
-          slider.slides.attr({'aria-selected': 'false', 'tabindex' : '-1'});
-          slider.slides.eq(slider.currentSlide).attr({'aria-selected' : 'true', 'tabindex' : '0'});
+          slider.slides.attr('aria-selected', 'false');
+          slider.slides.eq(slider.currentSlide).attr('aria-selected', 'true');
+          $('.flexslider--gallery-thumbs').find('.flex-active-slide').attr('aria-selected', 'true');
         }
       });
 
