--- a/app/assets/stylesheets/partials/buttons/_base.scss
+++ b/app/assets/stylesheets/partials/buttons/_base.scss
@@ -44,6 +44,8 @@
 		padding-right: 0;
 	}
 
+	&.btn--full-left {text-align: left;}
+
 	/* Small and large sizes */
 	&.btn--sml {@include font-size($font-size-sml, normal);}
 
@@ -51,4 +53,17 @@
 
 	/* Apply right spacing for adjacent buttons */
 	&.btn--spacing {margin-right: to-em($spacing-quarter);}
+
+	/* Used when you need to position an arrow icon over to the far right */
+	&.btn--pointer {
+		position: relative;
+		@include to-em(padding-right, $spacing-base);
+
+		.btn--pointer__icon {
+			position: absolute;
+			@include to-em(right, $spacing-half);
+			top: 50%;
+			@include to-em(margin-top, -8.5 - 1);
+		}
+	}
 }
