Get slider styles from ./vendor

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,7 +43,7 @@ Global stylesheet
 */
 
 // = require_self
-//*= require jquery.ui.slider
+//*= require ./vendor/jquery.ui.slider
 
 
 /* [IMPORT ALL PARTIALS]
