--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,7 @@
 
 	<%= javascript_include_tag "vendor/modernizr.min" %>
 
-	<!--[if (lt IE 9) & (!IEMobile)]>
-	  <%= javascript_include_tag "selectivizr/selectivizr" %>
-	<![endif]-->
+	<%= render 'shared/oldie' %>
 
 	<!-- IE 10 tile icon: http://blogs.msdn.com/b/ie/archive/2012/06/08/high-quality-visuals-for-pinned-sites-in-windows-8.aspx -->
 	<meta name="msapplication-TileColor" content="#da291c">
