adding a new module

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,6 +125,7 @@ Global stylesheet
 @import "partials/modules/detail-view";
 @import "partials/modules/social-share";
 @import "partials/modules/pin-board";
+@import "partials/modules/centres-list";
 
 
   /* Modules -> Widgets */
