tweaking base and main button styles

--- a/app/assets/stylesheets/partials/buttons/_base.scss
+++ b/app/assets/stylesheets/partials/buttons/_base.scss
@@ -59,11 +59,17 @@
 		position: relative;
 		@include to-em(padding-right, $spacing-base);
 
+		/* Arrow icon */
 		.btn--pointer__icon {
 			position: absolute;
 			@include to-em(right, $spacing-half);
 			top: 50%;
-			@include to-em(margin-top, -8.5 - 1);
+			@include translate(0, -50%);
+
+			/* Old IE */
+			@include old-ie {
+				top: 28%;
+			}
 		}
 	}
 }
