--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,41 +1,36 @@
 <div class="js-toggle-detail-view detail-view__divider">
 
   <!-- Col 1# -->
-  <div class="grid grid--gutterless grid--rev grid--flush">
+  <div class="detail-view__divider--col grid grid--gutterless grid--rev-stack grid--rev grid--flush">
 
     <!-- Product name, brand, price, location and contact -->
     <div class="grid__item non-palm-two-fifths">
 
       <!-- Product name, brand and price -->
-      <header class="island island--top-btm detail-view__divider">
-        <div class="container">
-          <h2 class="detail-view__hdr hn detail-view__mrg-half" id="detail-view__hdr">Sieynna Boot</h2>
-          <p class="detail-view__meta"><span class="detail-view__subtle-txt">from</span> Saba <em>$499.00</em></p>
-        </div>
+      <header class="island detail-view__divider">
+        <h2 class="detail-view__hdr hn detail-view__mrg-half" id="detail-view__hdr">Sieynna Boot</h2>
+        <p class="detail-view__meta"><span class="detail-view__subtle-txt">from</span> Saba <em>$499.00</em></p>
       </header>
       <!-- //Product name, brand and price -->
 
       <!-- Store location -->
-      <div class="store-location detail-view__divider">
-        <div class="box hide-fully">
-            <img src="/assets/dummy/retailer-logo.png" alt="">
-            <p>Open till <time datetime="">6pm</time> tonight</p>
-            <a href="#" class="btn btn--main"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store map</a>
-        </div>
-        <img src="/assets/dummy/map-tile.png" alt="">
+      <div class="store-location detail-view__divider" style="height: 220px; background: url(/assets/dummy/map-tile.png) no-repeat; background-size: cover;">
+
       </div>
       <!-- //Store location -->
 
       <!-- Contact store -->
       <div class="island island--fill island--center islet-tops detail-view__divider">
-        <span class="hide-fully--non-palm"><a href="tel:0298311525" class="btn btn--full btn--main btn--main-alt2 btn--main-lrg"><span class="icon icon--phone icon--xlrg icon--spacing-lrg" aria-hidden="true"></span><strong>Call SABA</strong></a></span>
-        <p class="hide-fully--palm"><span class="detail-view__subtle-txt">Check store availability</span> <span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span> 02 9381 1525</p>
+        <span class="hide-fully--non-palm">
+          <a href="tel:0298311525" class="btn btn--full btn--main btn--main-alt2 btn--main-lrg"><span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call SABA</strong></a>
+        </span>
+        <p class="detail-view__check-avble hide-fully--palm"><span class="detail-view__subtle-txt">Check store availability</span> <em><span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span> 02 9381 1525</em></p>
       </div>
       <!-- //Contact store -->
 
       <!-- Store link -->
       <div class="island island--center detail-view__divider--palm">
-        <a href="#" class="btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg txt-break-word" rel="external"><span class="icon icon--products icon--xlrg icon--spacing-lrg" aria-hidden="true"></span>Buy from Quicksilver & Ripcurl<span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span></a>
+        <a href="#" class="btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg btn--main-flanked" rel="external">Buy from Saba<span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span><span class="icon icon--link icon--xlrg icon--flush-top btn--pointer__icon" aria-hidden="true"></span></a>
       </div>
       <!-- //Store link -->
 
@@ -44,6 +39,7 @@
 
     <!-- Product images -->
     <div class="grid__item non-palm-three-fifths">
+
       <div class="island island--top-btm detail-view__divider--palm">
         <!-- Flexslider -->
         <div class="flexslider flexslider--gallery flexslider--gallery-lrg-img">
@@ -63,8 +59,11 @@
         </div>
         <!-- //Flexslider -->
       </div>
+
     </div>
     <!-- //Product images -->
+
+    <span class="detail-view__divider--col-line hide-fully--palm"></span>
 
   </div>
   <!-- //Col 1# -->
@@ -73,8 +72,8 @@
   <div class="grid grid--gutterless grid--rev grid--flush">
 
     <!-- Available Colours -->
-    <div class="grid__item non-palm-two-fifths">
-      <div class="island detail-view__divider--palm">
+    <div class="detail-view__divider--top-non-palm grid__item non-palm-two-fifths">
+      <div class="island island--btm-palm">
         <h3 class="detail-view__hdr-sub hn">Available Colours</h3>
         <ul class="horiz-list horiz-list--comma">
           <li><strong>Black</strong></li><!--
@@ -85,7 +84,7 @@
     <!-- //Available Colours -->
 
     <!-- Description -->
-    <div class="grid__item non-palm-three-fifths detail-view__desc">
+    <div class="detail-view__desc detail-view__divider--top-non-palm grid__item non-palm-three-fifths">
       <div class="island">
         <h3 class="detail-view__hdr-sub hn">Description</h3>
         <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Maecenas faucibus mollis interdum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
@@ -101,18 +100,14 @@
 <!-- Availability -->
 <div class="island js-toggle-detail-view">
   <h3 class="detail-view__hdr-sub hn">Also available at</h3>
-  <ul class="centres-list">
-    <li><a href="#"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Eastgardens<span class="icon icon--arrow-right" aria-hidden="true"></span></a></li>
-    <li><a href="#"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Warringah Mall<span class="icon icon--arrow-right" aria-hidden="true"></span></a></li>
+  <!-- [BACK END] only use a list when they're multiple items -->
+  <ul>
+    <li><a href="#" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Eastgardens<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
+    <li><a href="#" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Warringah Mall<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
+    <li><a href="#" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Bondi Junction<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
   </ul>
 </div>
 <!-- //Availability -->
-
-<!-- Availability toggle -->
-<div class="island hide-fully--palm">
-  <button type="button" class="btn btn--pointer btn--main btn--main-alt js-toggle-detail-view-btn"><span class="js-toggle-detail-view-btn__txt">Check nearby availability</span><span class="icon icon--arrow-right-big btn--pointer__icon" aria-hidden="true"></span></button>
-</div>
-<!-- //Availability toggle -->
 
 <%- content_for :javascript do -%>
   <!-- Run 'Flexslider' plugin -->
