.css.scss created issues
As sass is doing the imports not asset pipeline.

--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -29,7 +29,7 @@ $fix-mqs: 1600;
 /* [IMPORTS]
 -------------------------------------------------------*/
 /* Import everything from 'application.scss' */
-@import "application.css";
+@import "application";
 
 
 /* ======================================================================================
