--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,3 +27,30 @@
       <h3 class="detail-view__hdr-sub hn">Event Schedule</h3>
     </div>
 </div>
+
+
+<div class="container timelines">
+  <dl class="timelines__timeline">
+    <dt class="timelines__day">
+      Monday
+      <div class="timelines__day__date">
+        <time datetime=""><em>25</em>Aug
+      </div>
+    </dt>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+  </dl>
+
+  <dl class="timelines__timeline">
+    <dt class="timelines__day">
+      Monday
+      <div class="timelines__day__date">
+        <time datetime=""><em>25</em>Aug
+      </div>
+    </dt>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+    <dd class="timelines__time">9.00am - 10:30pm</dd>
+  </dl>
+</div>
