--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,6 +126,7 @@ Global stylesheet
 @import "partials/modules/social-share";
 @import "partials/modules/pin-board";
 @import "partials/modules/centres-list";
+@import "partials/modules/timeline";
 
 
   /* Modules -> Widgets */
