--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -191,21 +191,7 @@
 
 			<!-- Global search -->
 			<div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
-				<div class="container">
-
-					<!-- Search form -->
-					<form class="search-mini" action="#" method="post" role="search">
-						<span class="icon icon--search" aria-hidden="true"></span>
-						<label for="global-search" class="hide-visually">Search site</label>
-						<input type="search" class="search-mini__input" id="global-search" name="global-search" placeholder="Search stores, products, deals &amp; events&#8230;">
-					</form>
-					<!-- //Search form -->
-
-					<!-- Close search -->
-					<button class="btn header__overlay__close-btn hide-fully--non-palm js-search-btn-toggle js-disabled-hide" type="button"><span class="icon icon--close-lrg js-disabled-hide" aria-hidden="true"></span><span class="hide-visually"> Close search</span></button>
-					<!-- //Close search -->
-
-				</div>
+                          <%= render partial: 'layouts/global_search' %>
 			</div>
 			<!-- //Global search -->
 
