--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
 </head>
 
-<body ng-app="Westfield" class="<%= params[:controller] %> <%= params[:action] %> <%= yield :class_for_body %>">
+<body class="<%= params[:controller] %> <%= params[:action] %> <%= yield :class_for_body %>" ng-app="Westfield" ng-init="centre_id='<%= params[:centre_id] || params[:id] %>'">
 
 	<!-- Skip link -->
 	<a href="#main" class="hide-visually skip-link">Skip to main content</a>
