removing angular, changing ios hook name and updating flexslider path

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -108,7 +108,7 @@
 
 <%- content_for :javascript do -%>
   <!-- Run 'Flexslider' plugin -->
-  <%= javascript_include_tag 'vendor/jquery.flexslider' %>
+  <%= javascript_include_tag 'flexslider/jquery.flexslider' %>
   <script>
     $(window).load(function() {
 
