* jQuery required for conditional support items * SVG when you don't have support for SVG! * Init placeholder after its been loaded

--- a/app/assets/javascripts/support/input-placeholder.js.erb
+++ b/app/assets/javascripts/support/input-placeholder.js.erb
@@ -1,6 +1,9 @@
 Modernizr.load([
   {
     test: Modernizr.input.placeholder,
-    nope: ['<%= asset_path "jquery-placeholder/jquery.placeholder.js" %>']
+    nope: ['<%= asset_path "jquery-placeholder/jquery.placeholder.js" %>'],
+    complete: function () {
+      $('input, textarea').placeholder();
+    }
   }
 ]);
