Callback, not complete

--- a/app/assets/javascripts/support/input-placeholder.js.erb
+++ b/app/assets/javascripts/support/input-placeholder.js.erb
@@ -2,7 +2,7 @@ Modernizr.load([
   {
     test: Modernizr.input.placeholder,
     nope: ['<%= asset_path "jquery-placeholder/jquery.placeholder.js" %>'],
-    complete: function () {
+    callback: function () {
       $('input, textarea').placeholder();
     }
   }
