adds default store pre-select to maps

--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -6,6 +6,6 @@
 <%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
 <%= javascript_include_tag 'map' %>
 <%= javascript_tag do %>
-  new Map
+  new Map({select: <%= store_id || 'null' %>})
 <% end %>
 <!--><![endif]-->
