--- a/app/assets/stylesheets/partials/modules/_centres-list.scss
+++ b/app/assets/stylesheets/partials/modules/_centres-list.scss
@@ -18,7 +18,7 @@
 	@include font-size($font-size-sml, 1.5);
 	font-weight: bold;
 	display: block;
-	border-bottom: 1px solid #dfdfdf;
+	border-bottom: 1px solid $color-grey-2;
 	@include to-rem(padding-top padding-bottom, $spacing-quarter);
 
 	/* Increase padding at this breakpoint */
